@@ -1,3 +1,8 @@
+Thu, 21 Sep 2006 21:36:09 +0200 <informancer@web.de>
+	* Added loading and saving from ChannelList
+	* removed class variables from gPodderChannelReader
+	* updated rununit.py
+
 Tue, 19 Sep 2006 22:52:42 +0200 <informancer@web.de>
 	* Added item deletion and update to ChannelList
 
